fix connexion firebase + toggler mobile menu

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,21 @@
         j.async = true;
         j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-MRN8RKF");
+    </script>
+    <!-- End Google Tag Manager -->
+
+    <!-- Google Tag Manager -->
+    <script>
+      (function(w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-KGFSJ9V");
     </script>
     <!-- End Google Tag Manager -->
@@ -52,15 +67,16 @@
 
     <!-- Axeptio -->
     <script>
-      window.axeptioSettings = {
-        clientId: "60cf646a738e6c4469692c49",
-        cookiesVersion: "compostall-base",
+      window.axeptioSettings = {
+        clientId: "60cf646a738e6c4469692c49",
+        cookiesVersion: "compostall-base",
       };
-       
-      (function(d, s) {
-        var t = d.getElementsByTagName(s)[0], e = d.createElement(s);
-        e.async = true; e.src = "//static.axept.io/sdk.js";
-        t.parentNode.insertBefore(e, t);
+      (function(d, s) {
+        var t = d.getElementsByTagName(s)[0],
+          e = d.createElement(s);
+        e.async = true;
+        e.src = "//static.axept.io/sdk.js";
+        t.parentNode.insertBefore(e, t);
       })(document, "script");
     </script>
     <!-- End Axeptio -->
@@ -82,6 +98,17 @@
     <title>Compost All</title>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-MRN8RKF"
+        height="0"
+        width="0"
+        style="display:none;visibility:hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <!-- Google Tag Manager (noscript) -->
     <noscript>
       <iframe
