lp v3 + connexion inscription

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="fr">
   <head>
     <!-- Google Tag Manager -->
     <script>
@@ -62,7 +62,8 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>Compost All</title>
   </head>
-  <body>
+  <body style="overflow-x: hidden;">
+    <script id="60ee04ea1329567569cf9250" src="https://dashboard.chatfuel.com/integration/fb-entry-point.js" async defer></script>
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
@@ -73,6 +74,7 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
+    
     <noscript>
       <strong>
         We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
