--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-
     <meta charset="utf-8" />
     <!-- Google Tag Manager -->
     <script>
@@ -17,7 +16,6 @@
       })(window, document, "script", "dataLayer", "GTM-MRN8RKF");
     </script>
     <!-- End Google Tag Manager -->
-
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
@@ -33,7 +31,6 @@
       gtag("config", "G-EBRYQ2ENV6");
     </script>
     <!-- End Global site tag -->
-
     <!-- Axeptio -->
     <script>
       window.axeptioSettings = {
@@ -49,12 +46,11 @@
       })(document, "script");
     </script>
     <!-- End Axeptio -->
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500;600;700;800&display=swap" rel="stylesheet">
 
-    
+    <link rel="image_src" href="@/assets/img/drive/Logo-header.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta
